Added alert interface
